# modern-CPP

./: .gitignore  CMakeLists.txt  README  archivo.txt  compile_commands.json  makefile  preguntas.txt  prueba_negacion.txt
src/: main.cpp
src/clases/: 001-flujos-1.cpp  002-flujos-2.cpp  003-namespaces.cpp  004-funciones-1.cpp  005-funciones-2.cpp  006-define.cpp  006-define.i  006.i  007-condicionales.cpp  008-2-0-atributos.cpp  008-2-1-enumeraciones.cpp  008-2-2-switch.cpp  008-3-0-arreglos.cpp  008-3-0-referencias.cpp  008-3-1-arreglos.cpp  008-string_view.cpp  main.cpp  temas.hpp
src/util/: misFuncionesMatematicas.cpp  misFuncionesMatematicas.hpp  utilities.cpp  utilities.hpp
txt/: mario-utf16.txt  mario-utf8.txt  mario.txt  u_mario-utf16.txt
